set the z-index to 9999 so it's displayed correctly
git-svn-id: svn://zon/projecten/zicht-libraries/ZichtAdminBundle/trunk@44617 0f35748b-8228-47f0-bbea-889afbbd9a42

--- a/src/Zicht/Bundle/AdminBundle/Resources/public/style/bar.css
+++ b/src/Zicht/Bundle/AdminBundle/Resources/public/style/bar.css
@@ -5,7 +5,7 @@
     top: 5px;
     width: 27px;
     height: 27px;
-    z-index: 101;
+    z-index: 9999;
     -webkit-border-radius: 14px 14px 0 0;
     -moz-border-radius: 14px 14px 0 0;
     -ms-border-radius: 14px 14px 0 0;
